--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <meta name="keywords" content="strona, szymon"> 
 	<meta name="description" content="hejka naklejka">
 	<!-- favicon -->
-	<link rel="icon" href="logo.png"" type="image/png" sizes="100x100">
+	<link rel="icon" href="img/logo.png" type="image/png" sizes="100x100">
 	<!-- stylesheets -->
-	<link rel="stylesheet" type="text/css" href="style.css"> 
-	<link rel="stylesheet" type="text/css" href="form_styles.css"> 
+	<link rel="stylesheet" type="text/css" href="css/form_styles.css"> 
+	<link rel='stylesheet' media='screen and (min-width: 320px) and (max-width: 767px)' href='css/mobile.css' />
+	<link rel='stylesheet' media='screen and (min-width: 768px)' href='css/tablet.css' />
+	<link rel='stylesheet' media='screen and (min-width: 1240px) ' href='css/desktop.css' />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<!-- scripts -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" defer></script>
-
-	<script src="script.js" defer></script>
+	<script src="js/script.js" defer></script>
 </head> 
 <body> 
 	<header class="height15">
@@ -121,6 +122,8 @@
 			</div>
 		</div>
 	</footer>
+
+	
 	
 </body> 
 </html> 
