--- a/o_firmie.html
+++ b/o_firmie.html
@@ -9,6 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
+	<link rel="stylesheet" type="text/css" href="css/form_styles.css"> 
+	<link rel='stylesheet' media='screen and (min-width: 320px) and (max-width: 1079px)' href='css/mobile.css' />
+	<link rel='stylesheet' media='screen and (min-width: 1080px) ' href='css/desktop.css' />
+
 	<script src="script.js" defer></script>
 </head> 
 <body> 
