--- a/pracownia_geotechniczna.html
+++ b/pracownia_geotechniczna.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="strona, szymon"> 
 	<meta name="description" content="hejka naklejka">
 	<!-- favicon -->
-	<link rel="icon" href="logo.png"" type="image/png" sizes="100x100">
+	<link rel="icon" href="logo.png" type="image/png" sizes="100x100">
 	<!-- stylesheets -->
-	<link rel="stylesheet" type="text/css" href="style.css"> 
-	<link rel="stylesheet" type="text/css" href="form_styles.css"> 
+	<link rel="stylesheet" type="text/css" href="css/form_styles.css"> 
+	<link rel='stylesheet' media='screen and (min-width: 320px) and (max-width: 1079px)' href='css/mobile.css' />
+	<link rel='stylesheet' media='screen and (min-width: 1080px) ' href='css/desktop.css' />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 	<!-- scripts -->
